# ohlarr

./: .env.example  .gitignore  .gitpod.yml  ARCHITECTURE.md  Anchor.toml  CONTRIBUTING.md  DEMO_SCRIPT.md  DEPLOY.md  LICENSE  README.md  demo.json  package.json  tsconfig.base.json  tsconfig.json
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml  demo.yml  deploy-devnet.yml
apps/buyer-agent/: package.json
apps/buyer-agent/src/: agent.ts
apps/seller-demo/: package.json
apps/seller-demo/src/: server.ts
apps/web/: .env.local.example  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/agent-buy/: route.ts
apps/web/app/api/demo/: route.ts
apps/web/app/api/stats/: route.ts
apps/web/app/api/x402/oracle/btc-usd/: route.ts
apps/web/app/dashboard/: page.tsx
apps/web/components/: animated-bg.tsx  rabbit-logo.tsx
apps/web/hooks/: use-program-events.ts
apps/web/lib/: solana.ts
programs/ohlarr_payments/: Cargo.toml
programs/ohlarr_payments/src/: lib.rs
scripts/: deploy-and-init.sh  setup-keypairs.sh
tests/: ohlarr_payments.ts  package.json
