[package]
name = "ohlarr_payments"
version = "0.1.0"
description = "Private payment rails for autonomous agents — Solana + MagicBlock PER"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "ohlarr_payments"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
